# beeport-stamp-stats

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  POSTGRES_STATUS.md  README.md  config.example.toml  config.yaml  gnosis-tx-stats-v2.js  gnosis-tx-stats.js  plan-addresses.md  plan.md  plan2.md  prompt.md  prompts.md  todo.md
migrations/: 20251210000001_initial_schema.sql  20251210000002_add_block_number_to_batches.sql  20251220000003_add_storage_incentives_events.sql  20251221000004_add_contract_address.sql  20260101000005_add_pot_withdrawn_support.sql  20260109000006_add_payer_to_batches.sql  20260109000007_add_contract_source_to_batches.sql  20260110000008_add_from_address.sql  20260111000009_add_addresses_table.sql  20260111000010_add_address_interactions_table.sql  20260111000011_add_transaction_details_table.sql  README.md
migrations_postgres/: 20251210000001_initial_schema.sql  20251210000002_add_block_number_to_batches.sql  20251220000003_add_storage_incentives_events.sql  20251221000004_add_contract_address.sql  20260101000005_add_pot_withdrawn_support.sql  20260109000006_add_from_address.sql  20260109000006_add_payer_to_batches.sql  20260109000007_add_contract_source_to_batches.sql  20260111000009_add_addresses_table.sql  20260111000010_add_address_interactions_table.sql  20260111000011_add_transaction_details_table.sql
plots/: plot.py
src/: batch.rs  blockchain.rs  cache.rs  cli.rs  config.rs  contracts.rs  display.rs  error.rs  events.rs  export.rs  hooks.rs  lib.rs  main.rs  price.rs  retry.rs  types.rs
tests/: config_tests.rs  price_tests.rs  (+1 more)
(+15 files in other folders)
