[package]
name = "beeport-stamp-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
# Ethereum interactions - using Alloy (the modern choice for 2025)
alloy = { version = "0.8", features = ["full", "node-bindings", "rpc-types", "signer-local"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Database - SQLx with SQLite, PostgreSQL, and Any support for runtime selection
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "any"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tables
tabled = "0.17"

# CSV
csv = "1.3"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
futures = "0.3"

# Cryptography for caching
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.14"
mockito = "1.6"
